--- a/cloudbuild-deploy.yaml
+++ b/cloudbuild-deploy.yaml
@@ -32,7 +32,7 @@ steps:
 
   - id: DEPLOY
     name: 'maven:3.6-jdk-14'
-    args: ['mvn', '-B', 'deploy', '-s', '.mvn/settings.xml', '-Dmaven.test.skip=true']
+    args: ['mvn', '-B', 'deploy', '-s', '.mvn/settings.xml']
     volumes:
     - name: user.home
       path: /root
