added logic to extract X-B3-TraceId from /put api header and put into MDC param.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
     group:
       dev:
         - debug
+  application:
+    name: ceres
 server:
   error:
     include-message: always
@@ -32,3 +34,6 @@ management:
       show-components: always
   server:
     port: ${MANAGEMENT_SERVER_PORT}
+logging:
+  pattern:
+    level: "%5p %mdc"
