--- a/k8s/config-map.yaml
+++ b/k8s/config-map.yaml
@@ -25,6 +25,7 @@ data:
         partitions-mapping-file: /config/partitions.json
         # must be multiple of max granularity width
         time-slot-width: 1h
+        last-touch-delay: 80m # should be time-slot-width < last-touch-delay !!
         processing-threads: 2
       raw-ttl: 2d
       series-set-cache-size: 2000000
