--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,15 +1,14 @@
 ceres:
   downsample:
     granularities:
-      - width: 1m
+      - width: 30s
         ttl: 12h
         partitionWidth: 2h
-      - width: 2m
+      - width: 1m
         ttl: 1d
         partitionWidth: 4h
-    # must be multiple of max granularity width
-    time-slot-width: 2m
-    last-touch-delay: 3m # should be time-slot-width < last-touch-delay !!
+    time-slot-width: 1m # must be multiple of max granularity width
+    last-touch-delay: 5s
     downsample-process-period: 32s
     partitions: 4
     partitions-to-process: 0-3
