--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,6 +12,7 @@ ceres:
     downsample-process-period: 32s
     partitions: 4
     partitions-to-process: 0-3
+    processing-threads: 10
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
