Added max-downsampling-time as configurable parameter

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,6 +24,7 @@ ceres:
     initial-processing-delay: 5s
     processing-threads: 5
     downsample-process-period: 5s
+    max-downsampling-time: 4m
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
