Added downsample spread period as configurable parameter

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,7 +24,8 @@ ceres:
     initial-processing-delay: 5s
     processing-threads: 5
     downsample-process-period: 5s
-    max-downsampling-time: 4m
+    downsample-spread-period: 10s
+    max-downsampling-time: 10m
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
