Limit the number of hashes that can be processed in one task

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ management:
   server:
     port: ${MANAGEMENT_SERVER_PORT}
 logging:
-  root:
-    level: TRACE
+  level:
+    root: INFO
   pattern:
     level: "%5p %mdc"
