--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,6 +25,7 @@ ceres:
     processing-threads: 5
     downsample-process-period: 5s
     downsample-spread-period: 10s
+    set-hashes-process-limit: 2
     max-downsampling-time: 10m
     old-timeslot-clean-interval: 20m
   tag-filter: truncate
