Made max downsampling job duration configurable

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,6 +21,7 @@ ceres:
         partitionWidth: 15m
     partitions: 4
     initial-processing-delay: 5s
+    max-downsample-job-duration: 30s
     processing-threads: 5
     downsample-spread-period: 15s
     set-hashes-process-limit: 5
