Added configurable jobs server

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,6 +25,8 @@ ceres:
     processing-threads: 5
     downsample-spread-period: 15s
     set-hashes-process-limit: 100
+    jobs-host: "localhost"
+    jobs-port: 9081
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
