Removed mongo config for connection test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       schema-action: create_if_not_exists
       local-datacenter: datacenter1
     mongodb:
-      uri: mongodb://10.76.4.83:27017,10.76.14.82:27017,10.76.0.58:27017/ceres
+      uri: mongodb://root:myU8KfkjLC@cassandra-mongodb/ceres?authSource=admin
   cache:
     # we have redis, but really just want in-memory caching
     type: simple
