--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,6 +25,7 @@ ceres:
     max-concurrent-downsample-hashes: 1
     processing-threads: 5
     downsample-spread-period: 2s
+    downsample-hash-cache-size: 10000
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
