--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,26 +1,50 @@
 ceres:
   downsample:
     granularities:
+      - width: 5s
+        ttl: 1h
+        partitionWidth: 30s
+      - width: 10s
+        ttl: 1h
+        partitionWidth: 30s
+      - width: 30s
+        ttl: 1h
+        partitionWidth: 30s
       - width: 1m
-        ttl: 12h
-        partitionWidth: 2h
-      - width: 2m
-        ttl: 1d
-        partitionWidth: 4h
-    time-slot-width: 2m
-    last-touch-delay: 1m
-    downsample-process-period: 32s
+        ttl: 1h
+        partitionWidth: 1m
+      - width: 5m
+        ttl: 1h
+        partitionWidth: 5m
+      - width: 15m
+        ttl: 1h
+        partitionWidth: 15m
     partitions: 4
-    partitions-to-process: 0-3
+    initial-processing-delay: 5s
+    max-downsample-job-duration: 5m
+    max-concurrent-downsample-hashes: 1
+    processing-threads: 5
+    downsample-spread-period: 2s
+    downsample-hash-cache-size: 10000
   tag-filter: truncate
   tag-value-limit: 50
   excluded-tag-keys: ["ip_address"]
   ingest-start-time: 7d
   ingest-end-time: 1d
+  raw-ttl: 1d
 spring:
   data:
     cassandra:
       local-datacenter: datacenter1
+      connection:
+        connect-timeout: 10s
+      request:
+        timeout: 10s
 management:
   server:
     port: 8081
+logging:
+  level:
+    com.rackspace.ceres.app: debug
+  file:
+    name: ceres-application.log
