Handle delayed timeslots (#126)
* Split tracking service into separate service for ingest only
* Added separate mechanism for delayed timeslots
* Added protection for hanging in-progress delayed timeslots
* Simplified non-delayed timeslots
* Process all delayed timeslots for a job in one go
* Created separate jobs for delayed downsampling
* Split off delayed tracking service into its own class and some other refactorings
* Added tracking services tests
* Addressed review comments. Updated hanging in-progress delayed timeslots
* Skipped sorting the delayed timeslots since all of them are processed in one job

Co-authored-by: mats3569 <mats.boman@rackspace.com>

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,18 +1,9 @@
 ceres:
   downsample:
     granularities:
-      - width: 5s
-        ttl: 1h
-        partitionWidth: 30s
-      - width: 10s
-        ttl: 1h
-        partitionWidth: 30s
-      - width: 30s
-        ttl: 1h
-        partitionWidth: 30s
       - width: 1m
         ttl: 1h
-        partitionWidth: 1m
+        partitionWidth: 5m
       - width: 5m
         ttl: 1h
         partitionWidth: 5m
@@ -25,6 +16,7 @@ ceres:
     max-concurrent-downsample-hashes: 1
     processing-threads: 5
     downsample-spread-period: 2s
+    downsample-delayed-timeslot-period: 10s
     downsample-hash-cache-size: 10000
   tag-filter: truncate
   tag-value-limit: 50
