--- a/.github/workflows/PR-check.yml
+++ b/.github/workflows/PR-check.yml
@@ -8,8 +8,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
+
+    - name: 'test'
+      run: 'git branch'
+
+    - uses: 'google-github-actions/auth@v0'
       with:
         credentials_json: '${{ secrets.GCP_DEV }}'
         
@@ -17,7 +20,7 @@ jobs:
       uses: 'google-github-actions/setup-gcloud@v0'
 
     - name: 'Use gcloud CLI'
-      run: 'gcloud info'
+      run: 'gsutil cp gs://salus-mavenrepository/m2-settings.xml ./.mvn/settings.xml'
 
     - name: Set up JDK 11
       uses: actions/setup-java@v3
@@ -27,6 +30,3 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B verify -s .mvn/settings.xml
-
-    - name: 'test'
-      run: 'git branch'
