--- a/.github/workflows/PR-check.yml
+++ b/.github/workflows/PR-check.yml
@@ -26,7 +26,11 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '14'
-        distribution: 'adopt'
+        distribution: zulu
+        java-package: jdk
+
+    - run: echo $JAVA_HOME
+    - run: java --version
 
     - name: Build with Maven
       run: sudo mvn -B verify -s .mvn/settings.xml
