--- a/.github/workflows/PR-check.yml
+++ b/.github/workflows/PR-check.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: 'test'
+      run: 'git branch'
+
     - uses: 'google-github-actions/auth@v0'
       with:
         credentials_json: '${{ secrets.GCP_DEV }}'
@@ -19,11 +22,14 @@ jobs:
     - name: 'Use gcloud CLI'
       run: 'gsutil cp gs://salus-mavenrepository/m2-settings.xml ./.mvn/settings.xml'
 
-    - name: Install Java
-      run: sudo sudo apt-get update && sudo apt-get install openjdk-14-jdk
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: '14'
+        distribution: 'adopt-hotspot'
 
     - run: echo $JAVA_HOME
-    - run: java --version
+    - run: sudo java --version
 
     - name: Build with Maven
       run: sudo mvn -B verify -s .mvn/settings.xml
