--- a/.github/workflows/PR-check.yml
+++ b/.github/workflows/PR-check.yml
@@ -22,17 +22,17 @@ jobs:
     - name: 'Use gcloud CLI'
       run: 'gsutil cp gs://salus-mavenrepository/m2-settings.xml ./.mvn/settings.xml'
 
+    - name: .m2 forder [*** fix it please ***]
+      run: sed -i 's*/root/.m2/*./.m2/*g' .mvn/settings.xml
+
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '14'
         distribution: 'adopt-hotspot'
 
-    - name: alternatives
-      run: sudo alternatives --list && sudo alternatives --set java /opt/hostedtoolcache/Java_Adopt_jdk/14.0.2-12/x64/bin/java
-
     - run: echo $JAVA_HOME
-    - run: sudo java --version
+    - run: java --version
 
     - name: Build with Maven
-      run: sudo mvn -B verify -s .mvn/settings.xml
+      run: mvn -B verify -s .mvn/settings.xml
