--- a/.github/workflows/PR-check.yml
+++ b/.github/workflows/PR-check.yml
@@ -3,7 +3,7 @@ name: PR check
 on: [pull_request]
 
 jobs:
-  compile:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,16 +34,5 @@ jobs:
     - name: Build with Maven
       run: mvn -B verify -s .mvn/settings.xml
 
-    - name: 'test'
-      run: 'ls target'
-
-  Docker:
-    runs-on: ubuntu-latest
-    needs: [Compile]
-
-    steps:
-    - name: 'test'
-      run: 'ls'
-    
-    - name: 'test'
-      run: 'ls target'
+    - name: docker build
+      run: docker build -t dummy-container .
