--- a/.github/workflows/Dev-Environment.yml
+++ b/.github/workflows/Dev-Environment.yml
@@ -42,4 +42,4 @@ jobs:
       run: docker build -t gcr.io/ceres-dev-222017/testdevops:latest .
 
     - name: Image push
-      run: docker push gcr.io/ceres-dev-222017/testdevops:latest .
+      run: docker push gcr.io/ceres-dev-222017/testdevops:latest
