--- a/.github/workflows/Dev-Environment.yml
+++ b/.github/workflows/Dev-Environment.yml
@@ -7,6 +7,7 @@ on:
       - master
     paths-ignore:
       - '.github/workflows/**'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -40,6 +41,9 @@ jobs:
 
     - name: Image build
       run: docker build -t gcr.io/ceres-dev-222017/testdevops:latest .
+
+    - name: Docker login
+      run: gcloud auth configure-docker gcr.io
 
     - name: Image push
       run: docker push gcr.io/ceres-dev-222017/testdevops:latest
