--- a/.github/workflows/Dev-Environment.yml
+++ b/.github/workflows/Dev-Environment.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  Build:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
@@ -23,9 +23,6 @@ jobs:
         
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v0'
-
-    - name: K8s login
-      run: gcloud container clusters get-credentials primary-cluster --zone us-east1-b --project ${{ secrets.GCP_DEV_ACC }}
 
     - name: 'Get settings from GS bucket'
       run: 'gsutil cp gs://salus-mavenrepository/m2-settings.xml ./.mvn/settings.xml'
@@ -51,6 +48,36 @@ jobs:
     - name: Image push
       run: docker push gcr.io/${{ secrets.GCP_DEV_ACC }}/testdevops:latest
 
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: [Build]
+
+    steps:
+
+    - uses: 'google-github-actions/auth@v0'
+      with:
+        credentials_json: '${{ secrets.GCP_DEV }}'
+        
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v0'
+
+    - name: K8s login
+      run: gcloud container clusters get-credentials primary-cluster --zone us-east1-b --project ${{ secrets.GCP_DEV_ACC }}
+
+    - name: Checkout helm-repo
+      uses: actions/checkout@v3
+      with:
+        repository: rax-maas/helm-ceres
+        path: helm-ceres
+
+    - uses: azure/setup-helm@v3
+      with:
+        version: latest'
+      id: install
+
     - name: test
-      run: kubectl get pods
+      run: ls helm-ceres
+
+    - name: helm test
+      run: helm show values helm-ceres/charts/ceres
 
