--- a/.github/workflows/Dev-Environment.yml
+++ b/.github/workflows/Dev-Environment.yml
@@ -68,6 +68,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: rax-maas/helm-ceres
+        ref: master
         path: helm-ceres
 
     - uses: azure/setup-helm@v3
