--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,15 +6,14 @@ spring:
         timeout: 5s
 ceres:
   downsample:
-    downsample-process-period: 30s
     initialProcessingDelay: 1s
     granularities:
       - width: 1m
         ttl: 12h
-        partitionWidth: 2h
+        partitionWidth: 5m
       - width: 2m
         ttl: 1d
-        partitionWidth: 4h
+        partitionWidth: 10m
   tag-filter: exclude
   tag-value-limit: 10
   ingest-start-time: 7d
