--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,6 +21,7 @@ ceres:
     processing-threads: 5
     downsample-spread-period: 2s
     downsample-delayed-spread-period: 10s
+    downsample-delay-factor: 1.4
     downsample-hash-cache-size: 10000
   tag-filter: truncate
   tag-value-limit: 50
