--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,6 +4,8 @@ spring:
       contact-points: ""
       request:
         timeout: 5s
+  main:
+    allow-bean-definition-overriding: true
 ceres:
   downsample:
     initialProcessingDelay: 1s
@@ -18,6 +20,7 @@ ceres:
   tag-value-limit: 10
   ingest-start-time: 7d
   ingest-end-time: 1d
+  elastic-search-index-name: metrics
 management:
   server:
     port: 8082
