moved es hosts to config.

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -20,6 +20,7 @@ ceres:
   tag-value-limit: 10
   ingest-start-time: 7d
   ingest-end-time: 1d
+  elastic-search-hosts: localhost:9200
   elastic-search-index-name: metrics
 management:
   server:
